--- a/init_data/Cargo.toml
+++ b/init_data/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 anyhow = "*"
 rusqlite = { version = "*", features = ["bundled"] }
+log = "*"
+pretty_env_logger = "*"
